--- a/package.json
+++ b/package.json
@@ -13,25 +13,28 @@
     "@mui/material": "^5.13.6",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
-    "react": "^18.2.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "react": "^17.0.1",
     "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.15.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.0",
     "sass": "^1.63.6",
     "styled-components": "^5.3.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -55,7 +58,7 @@
     ]
   },
   "devDependencies": {
-    "web-vitals": "^3.3.2",
-    "webpack": "^5.88.1"
+    "web-vitals": "^0.2.4",
+    "webpack": "4.44.2"
   }
 }
